Add TestFlight link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <img src="homeworkrIcon.png" width="100px">
                     </td>
                     <td>
-                        <h2>Homeworkr</h2>
+                        <a href="https://testflight.apple.com/join/8B6ZaZWE">Homeworkr</a>
                     </td>
                 </tr>
             </table>
