Add new file for Homeworkr and create section for Projects

--- a/index.html
+++ b/index.html
@@ -9,22 +9,19 @@
             <h1>Charles Chapman</h1>
         </header>
         <section>
-            <table>
-                <tr>
-                    <td>
-                        <img src="homeworkrIcon.png" width="100px">
-                    </td>
-                    <td>
-                        <a href="https://testflight.apple.com/join/8B6ZaZWE">Homeworkr</a>
-                    </td>
-                </tr>
-            </table>
-        </section>
-        <section>
-            <h2>Privacy Policy</h2>
-            <nav>
-                <a href="privacyPolicy.html">Privacy Policy</a>
-            </nav>
+            <h2>Projects:</h2>
+            <section>
+                <table>
+                    <tr>
+                        <td>
+                            <img src="homeworkrIcon.png" width="100px">
+                        </td>
+                        <td>
+                            <a href="homeworkr-web.html">Homeworkr</a>
+                        </td>
+                    </tr>
+                </table>
+            </section>
         </section>
     </body>
 </html>
