Add title to homeworkr file and change h1 style

--- a/homeworkr-web.html
+++ b/homeworkr-web.html
@@ -1,8 +1,13 @@
 <html>
     <head>
-
+        <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
+        <title>Homeworkr</title>
+        <meta name="author" content="Charles Chapman">
     </head>
     <body>
+        <header>
+            <h1>Homeworkr</h1>
+        </header>
         <section>
             <table>
                 <tr>
