--- a/homeworkr-web.html
+++ b/homeworkr-web.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
         <title>Homeworkr</title>
         <meta name="author" content="Charles Chapman">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
