add Homeworkr description

--- a/homeworkr-web.html
+++ b/homeworkr-web.html
@@ -16,10 +16,14 @@
                         <img src="homeworkrIcon.png" width="100px">
                     </td>
                     <td>
-                        <a href="https://testflight.apple.com/join/8B6ZaZWE">Testflight</a>
+                        <a href="https://testflight.apple.com/join/8B6ZaZWE">Join the Testflight!</a>
                     </td>
                 </tr>
             </table>
+        </section>
+        <section>
+            <h2>Description</h2>
+            <p>Homeworkr is aimed to help students manage their time and stay on top of their coursework. It allows students to save assignments, calculates their estimated GPA, and generates insights into their study habits.</p>
         </section>
         <section>
             <h2>Privacy Policy</h2>
