--- a/homeworkr-web.html
+++ b/homeworkr-web.html
@@ -8,7 +8,18 @@
     <body>
         <header>
             <h1>Homeworkr</h1>
+            <table>
+                <tr>
+                    <td>
+                        <p>Created by</p>
+                    </td>
+                    <td>
+                        <a href="index.html">Charles Chapman</a>
+                    </td>
+                </tr>
+            </table>
         </header>
+        <p></p>
         <section>
             <table>
                 <tr>
